# voicey

./: .gitignore  LICENSE  README.md  start.command  xtts_finetune_infer_test.py  xtts_finetune_run.py  xtts_finetune_smoke_test.py
extension/: background.js  caption-overlay.js  content.js  manifest.json  offscreen.html  offscreen.js
landing/: index.html
server/: main.py  pyproject.toml  recorder.py  scripts_data.py
server/static/: app.js  index.html
