[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "coqui-tts>=0.27.5",
    "faster-whisper>=1.2.1",
    "sentencepiece>=0.2.0",
    "sacremoses>=0.1.1",
    "fastapi>=0.138.2",
    "python-multipart>=0.0.32",
    "setuptools>=81.0.0",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "transformers==4.57.1",
    "uvicorn[standard]>=0.49.0",
]
